Revert "fix(picker): align all text"
This reverts commit bf0e2e43fb9ae43d4ecb5ce9a6172e8a974a4310.

--- a/components/fieldlabel/index.css
+++ b/components/fieldlabel/index.css
@@ -108,17 +108,12 @@ governing permissions and limitations under the License.
 .spectrum-FieldLabel--left,
 .spectrum-FieldLabel--right {
   display: inline-block;
+  padding-block: var(--mod-fieldlabel-side-padding-top, var(--spectrum-fieldlabel-side-padding-top)) 0;
   padding-inline: 0 var(--mod-fieldlabel-side-padding-right, var(--spectrum-fieldlabel-side-padding-right));
 }
 
 .spectrum-FieldLabel--right {
   text-align: end;
-  padding-block: var(--mod-fieldlabel-side-padding-top, var(--spectrum-fieldlabel-side-padding-top)) 0;
-}
-
-.spectrum-FieldLabel--left {
-  text-align: end;
-  padding-block: 8px 0;
 }
 
 /* Form: two column alignment via display: table */
